[gd_scene load_steps=4 format=3 uid="uid://dxd03hqr71cf0"]

[ext_resource type="Script" path="res://scripts/enemy_bullet.gd" id="1_fafdn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5iyf8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tbyjq"]
albedo_color = Color(1, 0, 0, 1)

[node name="Bullet" type="CharacterBody3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
script = ExtResource("1_fafdn")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1.61233, 0, 0, 0, 1, 0, 0, 0, 1.74602, 0, 0, 0.69828)

[node name="Area3D" type="Area3D" parent="." groups=["enemy_bullet"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.99585, 0.128821, 0, -0.128821, 1.99585, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("SphereShape3D_5iyf8")

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
transform = Transform3D(2.13862, 0, 0, 0, 1.89589, 0, 0, 0, 4.49633, 0, 0, 0.623169)
material = SubResource("StandardMaterial3D_tbyjq")

[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
